--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div id="tentativas">Tentativas: 0</div>
 
-    <script src="sortearNumero.js"></script>
-    <script src="validacao.js"></script>
+    <script src="./app/sortearNumero.js"></script>
+    <script src="./app/validacao.js"></script>
 </body>
 </html>
